# libwebcam

./: CMakeLists.txt  README  WebCam.cmake  colorspace.c  libwebcam.h  v4l2.c
test/: CMakeLists.txt  test_gtk.c  test_jpeg.c  test_sdl.c
wwwcam/: CMakeLists.txt  cmdcfg.c  cmdcfg.h  index.html  index_html.inc  optcfg.c  optcfg.h  sound.c  sound.h  txt2c.sh  wwwcam.c
wwwcam/jpeg/: README  jpge.c  jpge.h  makefile  stb_image.c  tga2jpg.c  timer.c  timer.h
wwwcam/mihl/: CMakeLists.txt  LICENSE  b64.c  glovars.h  mihl.c  mihl.cmake  mihl.h  tcp_utils.c  tcp_utils.h
wwwcam/mihl/example/: CMakeLists.txt  example_1.c  example_2.c  example_3.c  example_utils.h  prototype.js
wwwcam/web/: http.c  http.h  main.c  mime_gen.py
