CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libwebcam)

INCLUDE(CheckIncludeFiles)
INCLUDE(CheckCCompilerFlag)

CHECK_C_COMPILER_FLAG("-W -Wall" CWARNS)
IF(CWARNS)
	ADD_COMPILE_OPTIONS(-W -Wall)
ENDIF()

CHECK_C_COMPILER_FLAG("-Wno-unused-parameter" CWARNS_E)
IF(CWARNS_E)
	ADD_COMPILE_OPTIONS("-Wno-unused-parameter")
ENDIF()

CHECK_INCLUDE_FILES("stdio.h;jpeglib.h" HAVE_JPEGLIB_H)
IF(HAVE_JPEGLIB_H)
	ADD_DEFINITIONS(-DHAVE_JPEGLIB_H=1)
	SET(LIBJPEG jpeg)
ELSE()
	SET(LIBJPEG)
ENDIF()

INCLUDE(./WebCam.cmake)

ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(wwwcam)

