INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

# FIND_PACKAGE(GTK2 2.6 REQUIRED gtk)
INCLUDE(FindSDL)

ADD_EXECUTABLE(webcam_jpeg test_jpeg.c)
TARGET_LINK_LIBRARIES(webcam_jpeg ${LIBJPEG} webcam ${LIBWEBCAM_LIBS})

# IF(GTK2_FOUND)
# 	INCLUDE_DIRECTORIES(${GTK2_INCLUDE_DIRS})
# 	ADD_DEFINITIONS(${GTK2_DEFINITIONS})
# 	ADD_EXECUTABLE(webcam_gtk test_gtk.c)
# 	TARGET_LINK_LIBRARIES(webcam_gtk webcam ${LIBWEBCAM_LIBS} ${GTK2_LIBRARIES})
# ENDIF()

IF(SDL_FOUND)
	INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
	ADD_EXECUTABLE(webcam_sdl test_sdl.c)
	TARGET_LINK_LIBRARIES(webcam_sdl webcam ${LIBWEBCAM_LIBS} ${SDL_LIBRARY})
ENDIF()

