INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

ADD_SUBDIRECTORY(mihl)

INCLUDE_DIRECTORIES(mihl)

IF(USE_LIBJPEG)
	SET(JPGE_C "")
	SET(JPGLIB ${LIBJPEG})
	ADD_DEFINITIONS(-DWITH_LIBJPEG=1)
ELSE()
	SET(JPGE_C "jpeg/jpge.c")
	INCLUDE_DIRECTORIES(jpeg)
	SET(JPGLIB "")
ENDIF()

ADD_EXECUTABLE(wwwcam wwwcam.c ${JPGE_C})

TARGET_LINK_LIBRARIES(wwwcam webcam ${LIBWEBCAM_LIBS} mihl ${JPGLIB})
