INCLUDE(CheckLibraryExists)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
INCLUDE_DIRECTORIES(mihl)

ADD_SUBDIRECTORY(mihl)

CHECK_INCLUDE_FILES(threads.h HAVE_THREADS_H)
IF(HAVE_THREADS_H)
	ADD_DEFINITIONS(-DHAVE_THREADS_H=1)
ELSE()
	CHECK_LIBRARY_EXISTS(pthread pthread_create "pthread.h" HAVE_LIBPTHREAD)
ENDIF()

IF(USE_LIBJPEG)
	SET(JPGE_C "")
	SET(JPGLIB ${LIBJPEG})
	ADD_DEFINITIONS(-DWITH_LIBJPEG=1)
ELSE()
	SET(JPGE_C "jpeg/jpge.c")
	INCLUDE_DIRECTORIES(jpeg)
	SET(JPGLIB "")
ENDIF()

ADD_EXECUTABLE(wwwcam wwwcam.c sound.c tinycthread.c cmdcfg.c ${JPGE_C})

IF(HAVE_LIBPTHREAD)
	SET(PTHLIB "pthread")
ELSE()
	SET(PTHLIB)
ENDIF()

TARGET_LINK_LIBRARIES(wwwcam webcam ${LIBWEBCAM_LIBS} mihl ${JPGLIB} ${PTHLIB})

